[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "songs-dl"
version = "2024.8.16"
description = "Download songs on YouTube and add metadata."
readme = "README.md"
authors = [{ name = "Laurent FAVOLE", email = "laurentfavole03@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: Public Domain",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["youtube", "music"]
dependencies = [
    "mutagen",
    "Pillow",
    "rapidfuzz",
	"requests",
    "tqdm",
    "Unidecode",
    "yt-dlp",
]
requires-python = ">=3.7"

	[project.optional-dependencies]
	build = ["build", "pyinstaller", "twine"]
	dev = ["bumpver", "ruff"]
    docs = ["markdown-include", "mkdocs", "mkdocs-material", "mkdocs-minify-plugin"]
    lyrics = ["fpdf2"]

	[project.urls]
	Homepage = "https://github.com/lfavole/songs-dl"

	[project.scripts]
	songs-dl = "songs_dl.__main__:main"

[tool.bumpver]
current_version = "2024.8.16"
version_pattern = "YYYY.MM.DD"
commit_message = "chore: Release {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"songs_dl/__init__.py" = ["{version}"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "CPY", "D203", "D212", "DOC201", "DOC402", "DTZ", "EXE", "FBT", "FIX", "S310", "T", "TD002", "TD003"]

[tool.ruff.format]
preview = true
